Fix dashboard link namespace

--- a/server/templates/navbar/user.html
+++ b/server/templates/navbar/user.html
@@ -4,7 +4,7 @@
 		{% if "dashboard" in request.path %}
 			<a href="{% url "pages:page" "home"%}">Home</a>
 		{% else %}
-			<a href="{% url "home" "noise-orchestra-web" %}">My Dashboard</a>
+			<a href="{% url "dashboard:dashboard" "noise-orchestra-web" %}">My Dashboard</a>
 		{% endif %}
 		<a href="{% url "logout" %}">Logout</a>
 	{% else %}
