--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -5,14 +5,14 @@ $colors: (
     "highlight": #fdd01c,
 );
 
-// $font: (
-//     "main-family": sans-serif,
-//     "weight-thin": 300,
-//     "weight-medium": 500,
-//     "weight-fat": 700,
-//     "base-size": 62.5%,
-//     "smaller-size": 50%
-// );
+$font: (
+    "main-family": sans-serif,
+    "weight-thin": 300,
+    "weight-medium": 500,
+    "weight-fat": 700,
+    "base-size": 62.5%,
+    "smaller-size": 50%
+);
 //
 // $breakpoints: (
 //     "small": 50em,
