--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -13,15 +13,15 @@ $font: (
     "base-size": 62.5%,
     "smaller-size": 50%
 );
-//
-// $breakpoints: (
-//     "small": 50em,
-//     "medium": 76.8em,
-//     "large": 102.4em,
-//     "larger": 128em,
-//     "extra-large": 144em
-// );
-//
-// $sizes: (
-//     "header-height": 6rem
-// );
+
+$breakpoints: (
+    "small": 50em,
+    "medium": 76.8em,
+    "large": 102.4em,
+    "larger": 128em,
+    "extra-large": 144em
+);
+
+$sizes: (
+    "header-height": 6rem
+);
