--- a/server/templates/navbar/user.html
+++ b/server/templates/navbar/user.html
@@ -1,6 +1,7 @@
 {% block content %}
 	{% if request.user.is_authenticated %}
-		<span>Hello <span class="user-name">{{ request.user.username }}</span>!</span>
+		<!-- pass this into the vue app instead so it can be responsive -->
+		<!-- <span>Hello <span class="user-name">{{ request.user.username }}</span>!</span> -->
 		{% if "dashboard" in request.path %}
 			<a href="{% url "pages:page" "home"%}">Home</a>
 		{% else %}
