Rename user navbar in django template

--- a/server/templates/navbar/navbar.html
+++ b/server/templates/navbar/navbar.html
@@ -1,5 +1,5 @@
 {% block content %}
-  <div class="nav-bar">
+  <nav id="user-nav">
     <span class="user">{% include 'navbar/user.html' %}</span>
-  </div>
+  </nav>
 {% endblock %}
