Use span instread of nav for login link

--- a/server/templates/navbar/navbar.html
+++ b/server/templates/navbar/navbar.html
@@ -1,5 +1,5 @@
 {% block content %}
-  <nav id="user-nav">
+  <span id="user-nav">
     <span class="user">{% include 'navbar/user.html' %}</span>
-  </nav>
+  </span>
 {% endblock %}
