Use flexbox in pages app

--- a/server/templates/dashboard/dashboard.html
+++ b/server/templates/dashboard/dashboard.html
@@ -8,5 +8,5 @@
         <strong>Please enable JavaScript to continue.</strong>
     </noscript>
 
-    <main id="app"></div>
+    <div id="app"></div>
 {% endblock %}
