--- a/server/templates/navbar/navbar.html
+++ b/server/templates/navbar/navbar.html
@@ -1,5 +1,5 @@
 {% block content %}
-  <span id="user-nav">
-    <span class="user">{% include 'navbar/user.html' %}</span>
-  </span>
+  <div id="user-nav">
+    <div class="user">{% include 'navbar/user.html' %}</div>
+  </div>
 {% endblock %}
