--- a/frontend/src/scss/_common.scss
+++ b/frontend/src/scss/_common.scss
@@ -1,23 +1,52 @@
 @import "@/scss/_variables.scss";
 @mixin base-style {
 
+	// ::-webkit-scrollbar {
+	//     width: 0px;
+	//     background: transparent; /* make scrollbar transparent */
+	// }
+	/* width */
 	::-webkit-scrollbar {
-	    width: 0px;
-	    background: transparent; /* make scrollbar transparent */
+	  width: 12px;
+	}
+
+	/* Track */
+	::-webkit-scrollbar-track {
+	  background: map-get($colors, "dark");
+	}
+
+	/* Handle */
+	::-webkit-scrollbar-thumb {
+	  background: map-get($colors, "bright");
+	}
+
+	/* Handle on hover */
+	::-webkit-scrollbar-thumb:hover {
+	  background: map-get($colors, "highlight");
 	}
 
 	body {
-		overflow-y: hidden;
-		font-family: map-get($font, "main-family");
 		background-color: map-get($colors, "dark");
 	}
 
+	html, body {
+		width: 100%;
+		height: 100%;
+		margin: 0;
+		font-family: map-get($font, "main-family");
+	}
+
+	// body {
+	// 	overflow-y: hidden;
+	// 	padding: 0px;
+	// }
+
 	#app {
-		position: absolute;
-	  width: 100vw;
-	  left:0px;
-	  top: 0px;
-	  padding: 0px;
+		// position: absolute;
+	  // width: 100vw;
+	  // left:0px;
+	  // top: 0px;
+	  // padding: 0px;
 	}
 
 	img {
@@ -35,8 +64,8 @@
 	a {
 		font-weight: bold;
 		text-decoration: none;
-		padding-left: 2px;
-		padding-right: 2px;
+		// padding-left: 2px;
+		// padding-right: 2px;
 		color: map-get($colors, "dark");
 		background-color: map-get($colors, "highlight");
 	}
@@ -53,7 +82,7 @@
 	  top: 0px;
 	  right: 0px;
 	  z-index: 300;
-	  padding: 4px;
+	  // padding: 4px;
 	}
 
 	.user-name {
@@ -63,7 +92,7 @@
 	  display: none;
 	}
 	.desktopNav {
-	  display: block;
+	  // display: block;
 	}
 
 	@media (max-width: map-get($breakpoints, "small")) {
