--- a/frontend/src/scss/_common.scss
+++ b/frontend/src/scss/_common.scss
@@ -1,10 +1,10 @@
 @import "@/scss/_variables.scss";
 @mixin base-style {
 
-	// ::-webkit-scrollbar {
-	//     width: 0px;
-	//     background: transparent; /* make scrollbar transparent */
-	// }
+	::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+	}
 	/* width */
 	::-webkit-scrollbar {
 	  width: 12px;
@@ -30,16 +30,12 @@
 	}
 
 	html, body {
-		width: 100%;
-		height: 100%;
+		// width: 100%;
+		// height: 100%;
 		margin: 0;
 		font-family: map-get($font, "main-family");
+		// overflow-y: hidden;
 	}
-
-	// body {
-	// 	overflow-y: hidden;
-	// 	padding: 0px;
-	// }
 
 	#app {
 		// position: absolute;
@@ -78,11 +74,11 @@
 	.user {
 	  color: map-get($colors, "bright");
 	  display: block;
-	  position: absolute;
+	  position: fixed;
 	  top: 0px;
 	  right: 0px;
 	  z-index: 300;
-	  // padding: 4px;
+	  padding: 4px;
 	}
 
 	.user-name {
