--- a/frontend/src/scss/_common.scss
+++ b/frontend/src/scss/_common.scss
@@ -60,8 +60,8 @@
 	a {
 		font-weight: bold;
 		text-decoration: none;
-		// padding-left: 2px;
-		// padding-right: 2px;
+		padding-left: 2px;
+		padding-right: 2px;
 		color: map-get($colors, "dark");
 		background-color: map-get($colors, "highlight");
 	}
