--- a/frontend/src/scss/_common.scss
+++ b/frontend/src/scss/_common.scss
@@ -52,10 +52,10 @@
 	.user-name {
 		font-weight: bold;
 	}
-	.mobileNav {
+	.mobile-nav {
 	  display: none;
 	}
-	.desktopNav {
+	.desktop-nav {
 	  // display: block;
 	}
 
@@ -63,10 +63,10 @@
 		.user{
 			a {font-size: 20px;}
 		}
-	  .mobileNav {
+	  .mobile-nav {
 	    display: block;
 	  }
-	  .desktopNav {
+	  .desktop-nav {
 	    display: none;
 	  }
 	}
