--- a/frontend/src/scss/_common.scss
+++ b/frontend/src/scss/_common.scss
@@ -14,8 +14,17 @@
 		margin: 0;
 		font-family: map-get($font, "main-family");
 		font-size: 1em;
+		min-height: 100vh;
+	}
+
+	@media (min-width: map-get($breakpoints, "medium")) {
+		html, body {
+			min-height: 100%;
+			height: 100%
+		}
 	}
 }
+
 
 @mixin link-style {
 	a.router-link-exact-active {
