--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -6,6 +6,7 @@ $colors: (
 );
 
 $font: (
+    "heading-family": 'Russian',
     "main-family": sans-serif,
     "weight-thin": 300,
     "weight-medium": 500,
