--- a/server/templates/navbar/user.html
+++ b/server/templates/navbar/user.html
@@ -7,6 +7,6 @@
 		{% endif %}
 		<a href="{% url "logout" %}">Logout</a>
 	{% else %}
-		<a href="{% url "login" %}">Log-in</a>
+		<a href="{% url "login" %}">Login</a>
 	{% endif %}
 {% endblock %}
