Fix link style and hide listen page

--- a/frontend/src/scss/_common.scss
+++ b/frontend/src/scss/_common.scss
@@ -30,17 +30,20 @@
 	}
 
 	a {
-		font-family: map-get($font, "heading-family");
+		font-family: map-get($font, "main-family");
 		text-decoration: none;
 		padding-top: 2px;
 		padding-left: 2px;
 		margin-left: 2px;
 		margin-right: 2px;
-		color: map-get($colors, "dark");
 		background-color: map-get($colors, "highlight");
+		color: map-get($colors, "dark");
 	}
 	a:hover {
 	  background-color: map-get($colors, "bright");
+	}
+	.nav-link {
+		font-family: map-get($font, "heading-family");
 	}
 }
 
