--- a/frontend/src/scss/_common.scss
+++ b/frontend/src/scss/_common.scss
@@ -79,3 +79,35 @@
 	  }
 	}
 }
+
+@mixin api-style {
+
+	.api-button {
+		font-weight: bold;
+		text-decoration: none;
+		padding-left: 2px;
+		padding-right: 2px;
+		margin-left: 2px;
+		margin-right: 2px;
+		color: map-get($colors, "dark");
+		background-color: map-get($colors, "highlight");
+		border: none;
+		width: 40px;
+		display: inline-block;
+		margin: 4px 2px;
+		cursor: pointer;
+	}
+
+	.selected {
+		font-weight: bold;
+		background-color: map-get($colors, "bright");
+	}
+
+	.deactivate {
+		& .api-button {
+			cursor: not-allowed;
+		pointer-events: none;
+			background-color: grey;
+		}
+	}
+}
