--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -1,30 +1,30 @@
 $colors: (
-    "background": #000000,
-    "dark": #000000,
-		"bright": #00A8A8,
-    "highlight": #fdd01c,
+  'background': #000000,
+  'dark': #000000,
+  'bright': #00a8a8,
+  'highlight': #fdd01c,
 );
 
 $font: (
-    "heading-family": 'Russian',
-    "main-family": sans-serif,
-    "weight-thin": 300,
-    "weight-medium": 500,
-    "weight-fat": 700,
-    "base-size": 62.5%,
-    "smaller-size": 50%
+  'heading-family': 'Russian',
+  'main-family': sans-serif,
+  'weight-thin': 300,
+  'weight-medium': 500,
+  'weight-fat': 700,
+  'base-size': 62.5%,
+  'smaller-size': 50%,
 );
 
 $breakpoints: (
-    "small": 40em,
-    "medium": 50.8em,
-    "large": 60.4em,
-    "larger": 128em,
-    "extra-large": 144em
+  'small': 40em,
+  'medium': 50.8em,
+  'large': 60.4em,
+  'larger': 128em,
+  'extra-large': 144em,
 );
 
 $header-height: 40px;
 
 $sizes: (
-    "header-height": 40px
+  'header-height': 40px,
 );
