Build pipeline improvements

--- a/server/templates/pages/page.html
+++ b/server/templates/pages/page.html
@@ -1,4 +1,4 @@
-{% extends "pages/_vue_base.html" %}
+{% extends "vue_build/pages.html" %}
 
 {% block html_tag_attributes %}lang="en"{% endblock %}
 
