--- a/server/templates/dashboard/dashboard.html
+++ b/server/templates/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "dashboard/_vue_base.html" %}
+{% extends "vue_build/dashboard.html" %}
 
 {% block html_tag_attributes %}lang="en"{% endblock %}
 
